auth fields deleted
